// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<BulletText /> > should match snapshot for custom bullet text 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="sprinkles_alignItems_center_mobile__onxwjuzs sprinkles_display_flex_mobile__onxwjuf8 sprinkles_flexDirection_row_mobile__onxwju12s sprinkles_flexWrap_nowrap_mobile__onxwju13w sprinkles_gap_3_mobile__onxwjuu4 sprinkles_justifyContent_start_mobile__onxwju120"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwjuh4 sprinkles_flexShrink_0_mobile__onxwju13o"
    >
      <span>
        <span
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuf0"
          data-od-component="icon"
        >
          <svg
            aria-hidden="true"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuf0 sprinkles_width_full_mobile__onxwjuss sprinkles_height_full_mobile__onxwjuqs"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 256 256"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M229.66 77.66l-128 128a8 8 0 0 1-11.32 0l-56-56a8 8 0 0 1 11.32-11.32L96 188.69 218.34 66.34a8 8 0 0 1 11.32 11.32z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_flexGrow_1_mobile__onxwju13g"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjujs sprinkles_lineHeight_4_mobile__onxwjuhw sprinkles_fontWeight_normal__onxwjue7 typography_color_neutral__yhjp338 sprinkles_display_block_mobile__onxwjuf0"
      >
        Hello World
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> > should match snapshot for default bullet text 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="sprinkles_alignItems_center_mobile__onxwjuzs sprinkles_display_flex_mobile__onxwjuf8 sprinkles_flexDirection_row_mobile__onxwju12s sprinkles_flexWrap_nowrap_mobile__onxwju13w sprinkles_gap_3_mobile__onxwjuu4 sprinkles_justifyContent_start_mobile__onxwju120"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf8 sprinkles_position_relative_mobile__onxwjuh4 sprinkles_borderRadius_pill_mobile__onxwjumg sprinkles_alignItems_center_mobile__onxwjuzs sprinkles_flexShrink_0_mobile__onxwju13o sprinkles_justifyContent_center_mobile__onxwju11g BulletText_bullet__1o8gcm90 BulletText_primary__1o8gcm91"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_2_mobile__onxwjujk sprinkles_lineHeight_2_mobile__onxwjuho sprinkles_fontWeight_normal__onxwjue7 typography_color_neutral__yhjp338 BulletText_primaryText__1o8gcm93"
      >
        •
      </span>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_flexGrow_1_mobile__onxwju13g"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjujs sprinkles_lineHeight_4_mobile__onxwjuhw sprinkles_fontWeight_normal__onxwjue7 typography_color_neutral__yhjp338 sprinkles_display_block_mobile__onxwjuf0"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> > should match snapshot for ordered bullet text 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="sprinkles_alignItems_center_mobile__onxwjuzs sprinkles_display_flex_mobile__onxwjuf8 sprinkles_flexDirection_row_mobile__onxwju12s sprinkles_flexWrap_nowrap_mobile__onxwju13w sprinkles_gap_3_mobile__onxwjuu4 sprinkles_justifyContent_start_mobile__onxwju120"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf8 sprinkles_position_relative_mobile__onxwjuh4 sprinkles_borderRadius_pill_mobile__onxwjumg sprinkles_alignItems_center_mobile__onxwjuzs sprinkles_flexShrink_0_mobile__onxwju13o sprinkles_justifyContent_center_mobile__onxwju11g BulletText_bullet__1o8gcm90 BulletText_primary__1o8gcm91"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_2_mobile__onxwjujk sprinkles_lineHeight_2_mobile__onxwjuho sprinkles_fontWeight_normal__onxwjue7 typography_color_neutral__yhjp338 BulletText_primaryText__1o8gcm93"
      >
        ?
      </span>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_flexGrow_1_mobile__onxwju13g"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjujs sprinkles_lineHeight_4_mobile__onxwjuhw sprinkles_fontWeight_normal__onxwjue7 typography_color_neutral__yhjp338 sprinkles_display_block_mobile__onxwjuf0"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> > should match snapshot for primary bullet text with custom bullet character 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="sprinkles_alignItems_center_mobile__onxwjuzs sprinkles_display_flex_mobile__onxwjuf8 sprinkles_flexDirection_row_mobile__onxwju12s sprinkles_flexWrap_nowrap_mobile__onxwju13w sprinkles_gap_3_mobile__onxwjuu4 sprinkles_justifyContent_start_mobile__onxwju120"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf8 sprinkles_position_relative_mobile__onxwjuh4 sprinkles_borderRadius_pill_mobile__onxwjumg sprinkles_alignItems_center_mobile__onxwjuzs sprinkles_flexShrink_0_mobile__onxwju13o sprinkles_justifyContent_center_mobile__onxwju11g BulletText_bullet__1o8gcm90 BulletText_primary__1o8gcm91"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_2_mobile__onxwjujk sprinkles_lineHeight_2_mobile__onxwjuho sprinkles_fontWeight_normal__onxwjue7 typography_color_neutral__yhjp338 BulletText_primaryText__1o8gcm93"
      >
        ?
      </span>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_flexGrow_1_mobile__onxwju13g"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjujs sprinkles_lineHeight_4_mobile__onxwjuhw sprinkles_fontWeight_normal__onxwjue7 typography_color_neutral__yhjp338 sprinkles_display_block_mobile__onxwjuf0"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> > should match snapshot for secondary bullet text with custom bullet character 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="sprinkles_alignItems_center_mobile__onxwjuzs sprinkles_display_flex_mobile__onxwjuf8 sprinkles_flexDirection_row_mobile__onxwju12s sprinkles_flexWrap_nowrap_mobile__onxwju13w sprinkles_gap_3_mobile__onxwjuu4 sprinkles_justifyContent_start_mobile__onxwju120"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf8 sprinkles_position_relative_mobile__onxwjuh4 sprinkles_borderRadius_pill_mobile__onxwjumg sprinkles_alignItems_center_mobile__onxwjuzs sprinkles_flexShrink_0_mobile__onxwju13o sprinkles_justifyContent_center_mobile__onxwju11g BulletText_bullet__1o8gcm90 BulletText_secondary__1o8gcm92"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_2_mobile__onxwjujk sprinkles_lineHeight_2_mobile__onxwjuho sprinkles_fontWeight_normal__onxwjue7 typography_color_neutral__yhjp338 BulletText_secondaryText__1o8gcm94"
      >
        ?
      </span>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_flexGrow_1_mobile__onxwju13g"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjujs sprinkles_lineHeight_4_mobile__onxwjuhw sprinkles_fontWeight_normal__onxwjue7 typography_color_neutral__yhjp338 sprinkles_display_block_mobile__onxwjuf0"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;
